RTFACT-17052 - Another small css fix - align package type selection dropdown with main search input

--- a/src/ui_components/packages_native/components/packages/packages.style.less
+++ b/src/ui_components/packages_native/components/packages/packages.style.less
@@ -11,7 +11,7 @@ packages-component {
         .filter.repo-type {
           width: 220px;
           display: block;
-          top: 10px;
+          top: -5px;
           margin-right: 12px;
           position: relative;
         }
